tests/reference/asr-issue_8953-6b39f0d.stderr
semantic error: Type mismatch in argument `x`: expected `type(derived)` but got `integer`
  --> tests/errors/issue_8953.f90:23:10
   |
23 |   call s(r)
   |          ^ 
